# fastapi_auth

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
AuthService/: pyproject.toml
AuthService/app/: cert.pem  key.pem
AuthService/app/alembic/: env.py
AuthService/app/alembic/versions/: a6747a9f50eb_initial.py
AuthService/app/api/v1/: main.py
AuthService/app/api/v1/accounts/: handlers.py
AuthService/app/api/v1/roles/: handlers.py
AuthService/app/api/v1/socials/: handlers.py
AuthService/app/api/v1/users/: handlers.py
AuthService/app/infrastructure/database/: postgres.py
AuthService/app/infrastructure/kafka/: sender.py
AuthService/app/infrastructure/models/: role.py  social_account.py  user.py  user_history.py  user_role.py
AuthService/app/infrastructure/repositories/: base.py  cache.py  postgre.py  role.py  user.py
AuthService/app/infrastructure/storages/: token.py
AuthService/app/logic/dependencies/: main.py  registrator.py
AuthService/app/logic/dependencies/services/: auth_service_factory.py  role_service_factory.py  sender_factory.py  token_storage_factory.py  user_role_service_factory.py  user_service_factory.py
AuthService/app/logic/services/: auth.py  cache.py  role.py  social_providers.py  user.py  user_role.py
AuthService/app/logic/unit_of_work/: base.py  sqlalchemy.py
AuthService/app/schemas/: auth.py  base.py  events.py  result.py  role.py  social.py  token.py  user.py
AuthService/app/settings/: config.py
AuthService/app/tests/: config.py  conftest.py
AuthService/app/tests/infrastructure/models/: test_user.py
AuthService/app/tests/infrastructure/repositories/: test_cache.py  test_postgre.py  test_role.py  test_user.py
AuthService/app/tests/schemas/: test_auth.py  test_base.py  test_result.py  test_role.py  test_social.py  test_token.py  test_user.py
TelegramBot/: Dockerfile  pyproject.toml
TelegramBot/app/bot/: config.py  main.py
TelegramBot/app/settings/: config.py
(+4 files in other folders)
