[tool.poetry]
name = "authservice"
version = "0.1.0"
description = ""
authors = ["JonAJ <jonajmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["all"], version = "^0.34.0"}
pytest = "^8.3.4"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.7.1"
passlib = "^1.7.4"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
